--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "a simple api to find all the phone number",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/index.js"
@@ -11,16 +12,17 @@
     "type": "git",
     "url": "https://github.com/sathyarjunab/node-phone-directory.git"
   },
-  "author": "sathyarjun007",
+  "author": "sathyarjunab",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sathyarjunab/node-phone-directory/issues"
   },
   "homepage": "https://github.com/sathyarjunab/node-phone-directory#readme",
-  "dependencies": {
+  "devDependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "winston": "^3.13.0"
   }
 }
