--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js"
+    "start": "node --env-file=src/.env src/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +18,14 @@
     "url": "https://github.com/sathyarjunab/node-phone-directory/issues"
   },
   "homepage": "https://github.com/sathyarjunab/node-phone-directory#readme",
-  "devDependencies": {
+  "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
-    "nodemon": "^3.1.3",
     "winston": "^3.13.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.3"
   }
 }
