--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "Src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"],
+  "include": ["Src/**/*", "Src/Dto/Request/.ts"],
   "exclude": ["node_modules"]
 }
