--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "winston": "^3.13.0"
   },
   "devDependencies": {
+    "@ljharb/tsconfig": "^0.2.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "nodemon": "^3.1.4",
