--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
-DBUser:string = "sathyarjun007";
-DBPass:string = "SSgafPRhTbgsRWL0";
+dbUser:string = "sathyarjun007";
+dbPass:string = "SSgafPRhTbgsRWL0";
